--- a/app/src/styles/Footer.css
+++ b/app/src/styles/Footer.css
@@ -4,7 +4,6 @@
   padding: 1.5rem 0;
   margin-top: auto;
   color: #ffffff;
-  height: 100%;
 }
 
 .footer-container {
